Fix word breaking on mobile

--- a/css/theme.css
+++ b/css/theme.css
@@ -12801,8 +12801,8 @@ article {
   .entry-content p {
     font-size: 1rem;
     hyphens: auto;
-    -ms-word-break: break-all;
-    word-break: break-all;
+    -ms-word-break: break-word;
+    word-break: break-word;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
   }
